# PureXS

./: .gitignore  CHAT_CONTEXT_20260323.txt  PURECHART_API_REFERENCE.md  README.md  SetupAndRun.bat  build-and-deploy.sh  calibration_capture.py  dicom_export.py  flat_field_gain_map.npy  flat_field_row_profile.npy  hb_decoder.py  history.py  install_mac.sh  install_windows.bat  live_test.py  patch.py  purechart.py  purexs_decoder.spec  purexs_decoder_cli.py  purexs_gui.py  purexs_launcher.pyw  pyproject.toml  releases-gitignore  requirements-decoder.txt  requirements.txt  sgf_frame_gain.npy  sidexis_tone_lut.npy  test_gui.html  utils.py
.claude/: settings.local.json
.github/workflows/: deploy.yml
PureXS.WPF/: App.xaml  App.xaml.cs  COLOR_THEME_SPEC.md  PureXS.WPF.csproj  SESSION_20260407_EXPOSURE_FIXES.md  SIRONA_AUTO_DISCOVERY.md
PureXS.WPF/Models/: PatientHistoryItem.cs  PureChartPatient.cs  ScanlineData.cs  SessionData.cs  SironaSession.cs
PureXS.WPF/Services/: ConfigService.cs  DicomExportService.cs  EventLogService.cs  IConfigService.cs  IDicomExportService.cs  IEventLogService.cs  IImageProcessingService.cs  IPatientOutputService.cs  IPureChartService.cs  ISironaService.cs  IToastService.cs  ImageProcessingService.cs  PatientOutputService.cs  PureChartService.cs  SironaService.cs  ToastService.cs
PureXS.WPF/ViewModels/: HistoryViewModel.cs  MainViewModel.cs
PureXS.WPF/Views/: FacilityTokenDialog.xaml  FacilityTokenDialog.xaml.cs  HistoryWindow.xaml  HistoryWindow.xaml.cs  ImageEditWindow.xaml  ImageEditWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
calibration_data/: calibration_results.json
docs/: protocol.md
edge-functions/xray-patient-search/: index.ts
src/: __init__.py  __main__.py
src/api/: __init__.py  main.py  routes.py
src/core/: __init__.py  discovery.py
tests/: mock_device.py  test_live_api.py  test_orthophos_expose.py  test_protocol.py
(+9 files in other folders)
